parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> statement program
Rule 3     expression -> expression_num
Rule 4     expression -> expression_sign
Rule 5     expression -> expression_op
Rule 6     expression -> expression_incr
Rule 7     statement -> expression -
Rule 8     statement -> assignation -
Rule 9     statement -> structure
Rule 10    statement -> initialization -
Rule 11    statement -> PRINT TEXT -
Rule 12    statement -> PRINT IDENTIFIER -
Rule 13    statement -> PRINTERR TEXT -
Rule 14    statement -> PRINTERR IDENTIFIER -
Rule 15    statement -> BREAK -
Rule 16    bloc -> OPEN_BRACE program CLOSE_BRACE
Rule 17    structure -> whileloop bloc
Rule 18    structure -> forloop bloc
Rule 19    structure -> if bloc
Rule 20    structure -> if bloc ELSE bloc
Rule 21    forloop -> FOR ( initialization - comparison - expression )
Rule 22    forloop -> FORNEG ( initialization - NUMBER )
Rule 23    forloop -> FORNEG ( initialization - IDENTIFIER )
Rule 24    forloop -> FORPOS ( initialization - NUMBER )
Rule 25    forloop -> FORPOS ( initialization - IDENTIFIER )
Rule 26    whileloop -> WHILE ( comparison )
Rule 27    if -> IF ( comparison )
Rule 28    comparison_operator -> GREATER_OP
Rule 29    comparison_operator -> LESSER_OP
Rule 30    comparison_operator -> EQUALS
Rule 31    comparison_operator -> GREATER_OR_EQUALS_OP
Rule 32    comparison_operator -> LESSER_OR_EQUALS_OP
Rule 33    comparison_operator -> NOT_EQUALS
Rule 34    comparison -> expression comparison_operator expression
Rule 35    initialization -> initialization_num
Rule 36    initialization -> initialization_string
Rule 37    initialization -> initialization_bool
Rule 38    initialization_num -> FLOAT IDENTIFIER AFFECTATION NUMBER
Rule 39    initialization_num -> FLOAT IDENTIFIER AFFECTATION IDENTIFIER
Rule 40    initialization_num -> INT IDENTIFIER AFFECTATION NUMBER
Rule 41    initialization_num -> INT IDENTIFIER AFFECTATION IDENTIFIER
Rule 42    initialization_string -> STRING IDENTIFIER AFFECTATION TEXT
Rule 43    initialization_bool -> BOOLEAN IDENTIFIER AFFECTATION TRUE
Rule 44    initialization_bool -> BOOLEAN IDENTIFIER AFFECTATION FALSE
Rule 45    initialization_bool -> BOOLEAN IDENTIFIER AFFECTATION IDENTIFIER
Rule 46    assignation -> IDENTIFIER AFFECTATION expression
Rule 47    expression_num -> NUMBER
Rule 48    expression_num -> IDENTIFIER
Rule 49    expression_sign -> ADD_OP expression
Rule 50    expression_sign -> SUB_OP expression
Rule 51    expression_op -> expression ADD_OP expression
Rule 52    expression_op -> expression SUB_OP expression
Rule 53    expression_op -> expression MUL_OP expression
Rule 54    expression_op -> expression DIV_OP expression
Rule 55    expression_incr -> INCR_OP IDENTIFIER
Rule 56    expression_incr -> DECR_OP IDENTIFIER
Rule 57    expression -> ( expression )

Terminals, with rules where they appear

(                    : 21 22 23 24 25 26 27 57
)                    : 21 22 23 24 25 26 27 57
-                    : 7 8 10 11 12 13 14 15 21 21 22 23 24 25
ADD_OP               : 49 51
AFFECTATION          : 38 39 40 41 42 43 44 45 46
BOOLEAN              : 43 44 45
BREAK                : 15
CLOSE_BRACE          : 16
DECR_OP              : 56
DIV_OP               : 54
ELSE                 : 20
EQUALS               : 30
FALSE                : 44
FLOAT                : 38 39
FOR                  : 21
FORNEG               : 22 23
FORPOS               : 24 25
GREATER_OP           : 28
GREATER_OR_EQUALS_OP : 31
IDENTIFIER           : 12 14 23 25 38 39 39 40 41 41 42 43 44 45 45 46 48 55 56
IF                   : 27
INCR_OP              : 55
INT                  : 40 41
LESSER_OP            : 29
LESSER_OR_EQUALS_OP  : 32
MUL_OP               : 53
NOT_EQUALS           : 33
NUMBER               : 22 24 38 40 47
OPEN_BRACE           : 16
PRINT                : 11 12
PRINTERR             : 13 14
STRING               : 42
SUB_OP               : 50 52
TEXT                 : 11 13 42
TRUE                 : 43
WHILE                : 26
error                : 

Nonterminals, with rules where they appear

assignation          : 8
bloc                 : 17 18 19 20 20
comparison           : 21 26 27
comparison_operator  : 34
expression           : 7 21 34 34 46 49 50 51 51 52 52 53 53 54 54 57
expression_incr      : 6
expression_num       : 3
expression_op        : 5
expression_sign      : 4
forloop              : 18
if                   : 19 20
initialization       : 10 21 22 23 24 25
initialization_bool  : 37
initialization_num   : 35
initialization_string : 36
program              : 2 16 0
statement            : 1 2
structure            : 9
whileloop            : 17

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . statement program
    (7) statement -> . expression -
    (8) statement -> . assignation -
    (9) statement -> . structure
    (10) statement -> . initialization -
    (11) statement -> . PRINT TEXT -
    (12) statement -> . PRINT IDENTIFIER -
    (13) statement -> . PRINTERR TEXT -
    (14) statement -> . PRINTERR IDENTIFIER -
    (15) statement -> . BREAK -
    (3) expression -> . expression_num
    (4) expression -> . expression_sign
    (5) expression -> . expression_op
    (6) expression -> . expression_incr
    (57) expression -> . ( expression )
    (46) assignation -> . IDENTIFIER AFFECTATION expression
    (17) structure -> . whileloop bloc
    (18) structure -> . forloop bloc
    (19) structure -> . if bloc
    (20) structure -> . if bloc ELSE bloc
    (35) initialization -> . initialization_num
    (36) initialization -> . initialization_string
    (37) initialization -> . initialization_bool
    (47) expression_num -> . NUMBER
    (48) expression_num -> . IDENTIFIER
    (49) expression_sign -> . ADD_OP expression
    (50) expression_sign -> . SUB_OP expression
    (51) expression_op -> . expression ADD_OP expression
    (52) expression_op -> . expression SUB_OP expression
    (53) expression_op -> . expression MUL_OP expression
    (54) expression_op -> . expression DIV_OP expression
    (55) expression_incr -> . INCR_OP IDENTIFIER
    (56) expression_incr -> . DECR_OP IDENTIFIER
    (26) whileloop -> . WHILE ( comparison )
    (21) forloop -> . FOR ( initialization - comparison - expression )
    (22) forloop -> . FORNEG ( initialization - NUMBER )
    (23) forloop -> . FORNEG ( initialization - IDENTIFIER )
    (24) forloop -> . FORPOS ( initialization - NUMBER )
    (25) forloop -> . FORPOS ( initialization - IDENTIFIER )
    (27) if -> . IF ( comparison )
    (38) initialization_num -> . FLOAT IDENTIFIER AFFECTATION NUMBER
    (39) initialization_num -> . FLOAT IDENTIFIER AFFECTATION IDENTIFIER
    (40) initialization_num -> . INT IDENTIFIER AFFECTATION NUMBER
    (41) initialization_num -> . INT IDENTIFIER AFFECTATION IDENTIFIER
    (42) initialization_string -> . STRING IDENTIFIER AFFECTATION TEXT
    (43) initialization_bool -> . BOOLEAN IDENTIFIER AFFECTATION TRUE
    (44) initialization_bool -> . BOOLEAN IDENTIFIER AFFECTATION FALSE
    (45) initialization_bool -> . BOOLEAN IDENTIFIER AFFECTATION IDENTIFIER

    PRINT           shift and go to state 9
    PRINTERR        shift and go to state 10
    BREAK           shift and go to state 14
    (               shift and go to state 4
    IDENTIFIER      shift and go to state 5
    NUMBER          shift and go to state 24
    ADD_OP          shift and go to state 26
    SUB_OP          shift and go to state 33
    INCR_OP         shift and go to state 23
    DECR_OP         shift and go to state 12
    WHILE           shift and go to state 31
    FOR             shift and go to state 19
    FORNEG          shift and go to state 28
    FORPOS          shift and go to state 15
    IF              shift and go to state 7
    FLOAT           shift and go to state 2
    INT             shift and go to state 35
    STRING          shift and go to state 1
    BOOLEAN         shift and go to state 25

    if                             shift and go to state 16
    assignation                    shift and go to state 8
    whileloop                      shift and go to state 17
    initialization_num             shift and go to state 18
    structure                      shift and go to state 3
    expression                     shift and go to state 27
    expression_sign                shift and go to state 29
    expression_incr                shift and go to state 13
    statement                      shift and go to state 32
    expression_op                  shift and go to state 21
    program                        shift and go to state 30
    initialization_string          shift and go to state 6
    initialization_bool            shift and go to state 20
    initialization                 shift and go to state 34
    expression_num                 shift and go to state 22
    forloop                        shift and go to state 11

state 1

    (42) initialization_string -> STRING . IDENTIFIER AFFECTATION TEXT

    IDENTIFIER      shift and go to state 36


state 2

    (38) initialization_num -> FLOAT . IDENTIFIER AFFECTATION NUMBER
    (39) initialization_num -> FLOAT . IDENTIFIER AFFECTATION IDENTIFIER

    IDENTIFIER      shift and go to state 37


state 3

    (9) statement -> structure .

    PRINT           reduce using rule 9 (statement -> structure .)
    PRINTERR        reduce using rule 9 (statement -> structure .)
    BREAK           reduce using rule 9 (statement -> structure .)
    (               reduce using rule 9 (statement -> structure .)
    IDENTIFIER      reduce using rule 9 (statement -> structure .)
    NUMBER          reduce using rule 9 (statement -> structure .)
    ADD_OP          reduce using rule 9 (statement -> structure .)
    SUB_OP          reduce using rule 9 (statement -> structure .)
    INCR_OP         reduce using rule 9 (statement -> structure .)
    DECR_OP         reduce using rule 9 (statement -> structure .)
    WHILE           reduce using rule 9 (statement -> structure .)
    FOR             reduce using rule 9 (statement -> structure .)
    FORNEG          reduce using rule 9 (statement -> structure .)
    FORPOS          reduce using rule 9 (statement -> structure .)
    IF              reduce using rule 9 (statement -> structure .)
    FLOAT           reduce using rule 9 (statement -> structure .)
    INT             reduce using rule 9 (statement -> structure .)
    STRING          reduce using rule 9 (statement -> structure .)
    BOOLEAN         reduce using rule 9 (statement -> structure .)
    $end            reduce using rule 9 (statement -> structure .)
    CLOSE_BRACE     reduce using rule 9 (statement -> structure .)


state 4

    (57) expression -> ( . expression )
    (3) expression -> . expression_num
    (4) expression -> . expression_sign
    (5) expression -> . expression_op
    (6) expression -> . expression_incr
    (57) expression -> . ( expression )
    (47) expression_num -> . NUMBER
    (48) expression_num -> . IDENTIFIER
    (49) expression_sign -> . ADD_OP expression
    (50) expression_sign -> . SUB_OP expression
    (51) expression_op -> . expression ADD_OP expression
    (52) expression_op -> . expression SUB_OP expression
    (53) expression_op -> . expression MUL_OP expression
    (54) expression_op -> . expression DIV_OP expression
    (55) expression_incr -> . INCR_OP IDENTIFIER
    (56) expression_incr -> . DECR_OP IDENTIFIER

    (               shift and go to state 4
    NUMBER          shift and go to state 24
    IDENTIFIER      shift and go to state 39
    ADD_OP          shift and go to state 26
    SUB_OP          shift and go to state 33
    INCR_OP         shift and go to state 23
    DECR_OP         shift and go to state 12

    expression_op                  shift and go to state 21
    expression                     shift and go to state 38
    expression_sign                shift and go to state 29
    expression_num                 shift and go to state 22
    expression_incr                shift and go to state 13

state 5

    (46) assignation -> IDENTIFIER . AFFECTATION expression
    (48) expression_num -> IDENTIFIER .

    AFFECTATION     shift and go to state 40
    -               reduce using rule 48 (expression_num -> IDENTIFIER .)
    ADD_OP          reduce using rule 48 (expression_num -> IDENTIFIER .)
    SUB_OP          reduce using rule 48 (expression_num -> IDENTIFIER .)
    MUL_OP          reduce using rule 48 (expression_num -> IDENTIFIER .)
    DIV_OP          reduce using rule 48 (expression_num -> IDENTIFIER .)


state 6

    (36) initialization -> initialization_string .

    -               reduce using rule 36 (initialization -> initialization_string .)


state 7

    (27) if -> IF . ( comparison )

    (               shift and go to state 41


state 8

    (8) statement -> assignation . -

    -               shift and go to state 42


state 9

    (11) statement -> PRINT . TEXT -
    (12) statement -> PRINT . IDENTIFIER -

    TEXT            shift and go to state 44
    IDENTIFIER      shift and go to state 43


state 10

    (13) statement -> PRINTERR . TEXT -
    (14) statement -> PRINTERR . IDENTIFIER -

    TEXT            shift and go to state 46
    IDENTIFIER      shift and go to state 45


state 11

    (18) structure -> forloop . bloc
    (16) bloc -> . OPEN_BRACE program CLOSE_BRACE

    OPEN_BRACE      shift and go to state 48

    bloc                           shift and go to state 47

state 12

    (56) expression_incr -> DECR_OP . IDENTIFIER

    IDENTIFIER      shift and go to state 49


state 13

    (6) expression -> expression_incr .

    ADD_OP          reduce using rule 6 (expression -> expression_incr .)
    SUB_OP          reduce using rule 6 (expression -> expression_incr .)
    MUL_OP          reduce using rule 6 (expression -> expression_incr .)
    DIV_OP          reduce using rule 6 (expression -> expression_incr .)
    GREATER_OP      reduce using rule 6 (expression -> expression_incr .)
    LESSER_OP       reduce using rule 6 (expression -> expression_incr .)
    EQUALS          reduce using rule 6 (expression -> expression_incr .)
    GREATER_OR_EQUALS_OP reduce using rule 6 (expression -> expression_incr .)
    LESSER_OR_EQUALS_OP reduce using rule 6 (expression -> expression_incr .)
    NOT_EQUALS      reduce using rule 6 (expression -> expression_incr .)
    )               reduce using rule 6 (expression -> expression_incr .)
    -               reduce using rule 6 (expression -> expression_incr .)


state 14

    (15) statement -> BREAK . -

    -               shift and go to state 50


state 15

    (24) forloop -> FORPOS . ( initialization - NUMBER )
    (25) forloop -> FORPOS . ( initialization - IDENTIFIER )

    (               shift and go to state 51


state 16

    (19) structure -> if . bloc
    (20) structure -> if . bloc ELSE bloc
    (16) bloc -> . OPEN_BRACE program CLOSE_BRACE

    OPEN_BRACE      shift and go to state 48

    bloc                           shift and go to state 52

state 17

    (17) structure -> whileloop . bloc
    (16) bloc -> . OPEN_BRACE program CLOSE_BRACE

    OPEN_BRACE      shift and go to state 48

    bloc                           shift and go to state 53

state 18

    (35) initialization -> initialization_num .

    -               reduce using rule 35 (initialization -> initialization_num .)


state 19

    (21) forloop -> FOR . ( initialization - comparison - expression )

    (               shift and go to state 54


state 20

    (37) initialization -> initialization_bool .

    -               reduce using rule 37 (initialization -> initialization_bool .)


state 21

    (5) expression -> expression_op .

    ADD_OP          reduce using rule 5 (expression -> expression_op .)
    SUB_OP          reduce using rule 5 (expression -> expression_op .)
    MUL_OP          reduce using rule 5 (expression -> expression_op .)
    DIV_OP          reduce using rule 5 (expression -> expression_op .)
    GREATER_OP      reduce using rule 5 (expression -> expression_op .)
    LESSER_OP       reduce using rule 5 (expression -> expression_op .)
    EQUALS          reduce using rule 5 (expression -> expression_op .)
    GREATER_OR_EQUALS_OP reduce using rule 5 (expression -> expression_op .)
    LESSER_OR_EQUALS_OP reduce using rule 5 (expression -> expression_op .)
    NOT_EQUALS      reduce using rule 5 (expression -> expression_op .)
    )               reduce using rule 5 (expression -> expression_op .)
    -               reduce using rule 5 (expression -> expression_op .)


state 22

    (3) expression -> expression_num .

    ADD_OP          reduce using rule 3 (expression -> expression_num .)
    SUB_OP          reduce using rule 3 (expression -> expression_num .)
    MUL_OP          reduce using rule 3 (expression -> expression_num .)
    DIV_OP          reduce using rule 3 (expression -> expression_num .)
    GREATER_OP      reduce using rule 3 (expression -> expression_num .)
    LESSER_OP       reduce using rule 3 (expression -> expression_num .)
    EQUALS          reduce using rule 3 (expression -> expression_num .)
    GREATER_OR_EQUALS_OP reduce using rule 3 (expression -> expression_num .)
    LESSER_OR_EQUALS_OP reduce using rule 3 (expression -> expression_num .)
    NOT_EQUALS      reduce using rule 3 (expression -> expression_num .)
    )               reduce using rule 3 (expression -> expression_num .)
    -               reduce using rule 3 (expression -> expression_num .)


state 23

    (55) expression_incr -> INCR_OP . IDENTIFIER

    IDENTIFIER      shift and go to state 55


state 24

    (47) expression_num -> NUMBER .

    ADD_OP          reduce using rule 47 (expression_num -> NUMBER .)
    SUB_OP          reduce using rule 47 (expression_num -> NUMBER .)
    MUL_OP          reduce using rule 47 (expression_num -> NUMBER .)
    DIV_OP          reduce using rule 47 (expression_num -> NUMBER .)
    -               reduce using rule 47 (expression_num -> NUMBER .)
    )               reduce using rule 47 (expression_num -> NUMBER .)
    GREATER_OP      reduce using rule 47 (expression_num -> NUMBER .)
    LESSER_OP       reduce using rule 47 (expression_num -> NUMBER .)
    EQUALS          reduce using rule 47 (expression_num -> NUMBER .)
    GREATER_OR_EQUALS_OP reduce using rule 47 (expression_num -> NUMBER .)
    LESSER_OR_EQUALS_OP reduce using rule 47 (expression_num -> NUMBER .)
    NOT_EQUALS      reduce using rule 47 (expression_num -> NUMBER .)


state 25

    (43) initialization_bool -> BOOLEAN . IDENTIFIER AFFECTATION TRUE
    (44) initialization_bool -> BOOLEAN . IDENTIFIER AFFECTATION FALSE
    (45) initialization_bool -> BOOLEAN . IDENTIFIER AFFECTATION IDENTIFIER

    IDENTIFIER      shift and go to state 56


state 26

    (49) expression_sign -> ADD_OP . expression
    (3) expression -> . expression_num
    (4) expression -> . expression_sign
    (5) expression -> . expression_op
    (6) expression -> . expression_incr
    (57) expression -> . ( expression )
    (47) expression_num -> . NUMBER
    (48) expression_num -> . IDENTIFIER
    (49) expression_sign -> . ADD_OP expression
    (50) expression_sign -> . SUB_OP expression
    (51) expression_op -> . expression ADD_OP expression
    (52) expression_op -> . expression SUB_OP expression
    (53) expression_op -> . expression MUL_OP expression
    (54) expression_op -> . expression DIV_OP expression
    (55) expression_incr -> . INCR_OP IDENTIFIER
    (56) expression_incr -> . DECR_OP IDENTIFIER

    (               shift and go to state 4
    NUMBER          shift and go to state 24
    IDENTIFIER      shift and go to state 39
    ADD_OP          shift and go to state 26
    SUB_OP          shift and go to state 33
    INCR_OP         shift and go to state 23
    DECR_OP         shift and go to state 12

    expression_op                  shift and go to state 21
    expression                     shift and go to state 57
    expression_sign                shift and go to state 29
    expression_num                 shift and go to state 22
    expression_incr                shift and go to state 13

state 27

    (7) statement -> expression . -
    (51) expression_op -> expression . ADD_OP expression
    (52) expression_op -> expression . SUB_OP expression
    (53) expression_op -> expression . MUL_OP expression
    (54) expression_op -> expression . DIV_OP expression

    -               shift and go to state 61
    ADD_OP          shift and go to state 59
    SUB_OP          shift and go to state 60
    MUL_OP          shift and go to state 62
    DIV_OP          shift and go to state 58


state 28

    (22) forloop -> FORNEG . ( initialization - NUMBER )
    (23) forloop -> FORNEG . ( initialization - IDENTIFIER )

    (               shift and go to state 63


state 29

    (4) expression -> expression_sign .

    ADD_OP          reduce using rule 4 (expression -> expression_sign .)
    SUB_OP          reduce using rule 4 (expression -> expression_sign .)
    MUL_OP          reduce using rule 4 (expression -> expression_sign .)
    DIV_OP          reduce using rule 4 (expression -> expression_sign .)
    GREATER_OP      reduce using rule 4 (expression -> expression_sign .)
    LESSER_OP       reduce using rule 4 (expression -> expression_sign .)
    EQUALS          reduce using rule 4 (expression -> expression_sign .)
    GREATER_OR_EQUALS_OP reduce using rule 4 (expression -> expression_sign .)
    LESSER_OR_EQUALS_OP reduce using rule 4 (expression -> expression_sign .)
    NOT_EQUALS      reduce using rule 4 (expression -> expression_sign .)
    )               reduce using rule 4 (expression -> expression_sign .)
    -               reduce using rule 4 (expression -> expression_sign .)


state 30

    (0) S' -> program .



state 31

    (26) whileloop -> WHILE . ( comparison )

    (               shift and go to state 64


state 32

    (1) program -> statement .
    (2) program -> statement . program
    (1) program -> . statement
    (2) program -> . statement program
    (7) statement -> . expression -
    (8) statement -> . assignation -
    (9) statement -> . structure
    (10) statement -> . initialization -
    (11) statement -> . PRINT TEXT -
    (12) statement -> . PRINT IDENTIFIER -
    (13) statement -> . PRINTERR TEXT -
    (14) statement -> . PRINTERR IDENTIFIER -
    (15) statement -> . BREAK -
    (3) expression -> . expression_num
    (4) expression -> . expression_sign
    (5) expression -> . expression_op
    (6) expression -> . expression_incr
    (57) expression -> . ( expression )
    (46) assignation -> . IDENTIFIER AFFECTATION expression
    (17) structure -> . whileloop bloc
    (18) structure -> . forloop bloc
    (19) structure -> . if bloc
    (20) structure -> . if bloc ELSE bloc
    (35) initialization -> . initialization_num
    (36) initialization -> . initialization_string
    (37) initialization -> . initialization_bool
    (47) expression_num -> . NUMBER
    (48) expression_num -> . IDENTIFIER
    (49) expression_sign -> . ADD_OP expression
    (50) expression_sign -> . SUB_OP expression
    (51) expression_op -> . expression ADD_OP expression
    (52) expression_op -> . expression SUB_OP expression
    (53) expression_op -> . expression MUL_OP expression
    (54) expression_op -> . expression DIV_OP expression
    (55) expression_incr -> . INCR_OP IDENTIFIER
    (56) expression_incr -> . DECR_OP IDENTIFIER
    (26) whileloop -> . WHILE ( comparison )
    (21) forloop -> . FOR ( initialization - comparison - expression )
    (22) forloop -> . FORNEG ( initialization - NUMBER )
    (23) forloop -> . FORNEG ( initialization - IDENTIFIER )
    (24) forloop -> . FORPOS ( initialization - NUMBER )
    (25) forloop -> . FORPOS ( initialization - IDENTIFIER )
    (27) if -> . IF ( comparison )
    (38) initialization_num -> . FLOAT IDENTIFIER AFFECTATION NUMBER
    (39) initialization_num -> . FLOAT IDENTIFIER AFFECTATION IDENTIFIER
    (40) initialization_num -> . INT IDENTIFIER AFFECTATION NUMBER
    (41) initialization_num -> . INT IDENTIFIER AFFECTATION IDENTIFIER
    (42) initialization_string -> . STRING IDENTIFIER AFFECTATION TEXT
    (43) initialization_bool -> . BOOLEAN IDENTIFIER AFFECTATION TRUE
    (44) initialization_bool -> . BOOLEAN IDENTIFIER AFFECTATION FALSE
    (45) initialization_bool -> . BOOLEAN IDENTIFIER AFFECTATION IDENTIFIER

    $end            reduce using rule 1 (program -> statement .)
    CLOSE_BRACE     reduce using rule 1 (program -> statement .)
    PRINT           shift and go to state 9
    PRINTERR        shift and go to state 10
    BREAK           shift and go to state 14
    (               shift and go to state 4
    IDENTIFIER      shift and go to state 5
    NUMBER          shift and go to state 24
    ADD_OP          shift and go to state 26
    SUB_OP          shift and go to state 33
    INCR_OP         shift and go to state 23
    DECR_OP         shift and go to state 12
    WHILE           shift and go to state 31
    FOR             shift and go to state 19
    FORNEG          shift and go to state 28
    FORPOS          shift and go to state 15
    IF              shift and go to state 7
    FLOAT           shift and go to state 2
    INT             shift and go to state 35
    STRING          shift and go to state 1
    BOOLEAN         shift and go to state 25

    if                             shift and go to state 16
    assignation                    shift and go to state 8
    whileloop                      shift and go to state 17
    initialization_num             shift and go to state 18
    structure                      shift and go to state 3
    expression                     shift and go to state 27
    expression_sign                shift and go to state 29
    expression_incr                shift and go to state 13
    statement                      shift and go to state 32
    expression_op                  shift and go to state 21
    program                        shift and go to state 65
    initialization_string          shift and go to state 6
    initialization_bool            shift and go to state 20
    initialization                 shift and go to state 34
    expression_num                 shift and go to state 22
    forloop                        shift and go to state 11

state 33

    (50) expression_sign -> SUB_OP . expression
    (3) expression -> . expression_num
    (4) expression -> . expression_sign
    (5) expression -> . expression_op
    (6) expression -> . expression_incr
    (57) expression -> . ( expression )
    (47) expression_num -> . NUMBER
    (48) expression_num -> . IDENTIFIER
    (49) expression_sign -> . ADD_OP expression
    (50) expression_sign -> . SUB_OP expression
    (51) expression_op -> . expression ADD_OP expression
    (52) expression_op -> . expression SUB_OP expression
    (53) expression_op -> . expression MUL_OP expression
    (54) expression_op -> . expression DIV_OP expression
    (55) expression_incr -> . INCR_OP IDENTIFIER
    (56) expression_incr -> . DECR_OP IDENTIFIER

    (               shift and go to state 4
    NUMBER          shift and go to state 24
    IDENTIFIER      shift and go to state 39
    ADD_OP          shift and go to state 26
    SUB_OP          shift and go to state 33
    INCR_OP         shift and go to state 23
    DECR_OP         shift and go to state 12

    expression_op                  shift and go to state 21
    expression                     shift and go to state 66
    expression_sign                shift and go to state 29
    expression_num                 shift and go to state 22
    expression_incr                shift and go to state 13

state 34

    (10) statement -> initialization . -

    -               shift and go to state 67


state 35

    (40) initialization_num -> INT . IDENTIFIER AFFECTATION NUMBER
    (41) initialization_num -> INT . IDENTIFIER AFFECTATION IDENTIFIER

    IDENTIFIER      shift and go to state 68


state 36

    (42) initialization_string -> STRING IDENTIFIER . AFFECTATION TEXT

    AFFECTATION     shift and go to state 69


state 37

    (38) initialization_num -> FLOAT IDENTIFIER . AFFECTATION NUMBER
    (39) initialization_num -> FLOAT IDENTIFIER . AFFECTATION IDENTIFIER

    AFFECTATION     shift and go to state 70


state 38

    (57) expression -> ( expression . )
    (51) expression_op -> expression . ADD_OP expression
    (52) expression_op -> expression . SUB_OP expression
    (53) expression_op -> expression . MUL_OP expression
    (54) expression_op -> expression . DIV_OP expression

    )               shift and go to state 71
    ADD_OP          shift and go to state 59
    SUB_OP          shift and go to state 60
    MUL_OP          shift and go to state 62
    DIV_OP          shift and go to state 58


state 39

    (48) expression_num -> IDENTIFIER .

    ADD_OP          reduce using rule 48 (expression_num -> IDENTIFIER .)
    SUB_OP          reduce using rule 48 (expression_num -> IDENTIFIER .)
    MUL_OP          reduce using rule 48 (expression_num -> IDENTIFIER .)
    DIV_OP          reduce using rule 48 (expression_num -> IDENTIFIER .)
    -               reduce using rule 48 (expression_num -> IDENTIFIER .)
    )               reduce using rule 48 (expression_num -> IDENTIFIER .)
    GREATER_OP      reduce using rule 48 (expression_num -> IDENTIFIER .)
    LESSER_OP       reduce using rule 48 (expression_num -> IDENTIFIER .)
    EQUALS          reduce using rule 48 (expression_num -> IDENTIFIER .)
    GREATER_OR_EQUALS_OP reduce using rule 48 (expression_num -> IDENTIFIER .)
    LESSER_OR_EQUALS_OP reduce using rule 48 (expression_num -> IDENTIFIER .)
    NOT_EQUALS      reduce using rule 48 (expression_num -> IDENTIFIER .)


state 40

    (46) assignation -> IDENTIFIER AFFECTATION . expression
    (3) expression -> . expression_num
    (4) expression -> . expression_sign
    (5) expression -> . expression_op
    (6) expression -> . expression_incr
    (57) expression -> . ( expression )
    (47) expression_num -> . NUMBER
    (48) expression_num -> . IDENTIFIER
    (49) expression_sign -> . ADD_OP expression
    (50) expression_sign -> . SUB_OP expression
    (51) expression_op -> . expression ADD_OP expression
    (52) expression_op -> . expression SUB_OP expression
    (53) expression_op -> . expression MUL_OP expression
    (54) expression_op -> . expression DIV_OP expression
    (55) expression_incr -> . INCR_OP IDENTIFIER
    (56) expression_incr -> . DECR_OP IDENTIFIER

    (               shift and go to state 4
    NUMBER          shift and go to state 24
    IDENTIFIER      shift and go to state 39
    ADD_OP          shift and go to state 26
    SUB_OP          shift and go to state 33
    INCR_OP         shift and go to state 23
    DECR_OP         shift and go to state 12

    expression_op                  shift and go to state 21
    expression                     shift and go to state 72
    expression_sign                shift and go to state 29
    expression_num                 shift and go to state 22
    expression_incr                shift and go to state 13

state 41

    (27) if -> IF ( . comparison )
    (34) comparison -> . expression comparison_operator expression
    (3) expression -> . expression_num
    (4) expression -> . expression_sign
    (5) expression -> . expression_op
    (6) expression -> . expression_incr
    (57) expression -> . ( expression )
    (47) expression_num -> . NUMBER
    (48) expression_num -> . IDENTIFIER
    (49) expression_sign -> . ADD_OP expression
    (50) expression_sign -> . SUB_OP expression
    (51) expression_op -> . expression ADD_OP expression
    (52) expression_op -> . expression SUB_OP expression
    (53) expression_op -> . expression MUL_OP expression
    (54) expression_op -> . expression DIV_OP expression
    (55) expression_incr -> . INCR_OP IDENTIFIER
    (56) expression_incr -> . DECR_OP IDENTIFIER

    (               shift and go to state 4
    NUMBER          shift and go to state 24
    IDENTIFIER      shift and go to state 39
    ADD_OP          shift and go to state 26
    SUB_OP          shift and go to state 33
    INCR_OP         shift and go to state 23
    DECR_OP         shift and go to state 12

    comparison                     shift and go to state 73
    expression_op                  shift and go to state 21
    expression_num                 shift and go to state 22
    expression                     shift and go to state 74
    expression_sign                shift and go to state 29
    expression_incr                shift and go to state 13

state 42

    (8) statement -> assignation - .

    PRINT           reduce using rule 8 (statement -> assignation - .)
    PRINTERR        reduce using rule 8 (statement -> assignation - .)
    BREAK           reduce using rule 8 (statement -> assignation - .)
    (               reduce using rule 8 (statement -> assignation - .)
    IDENTIFIER      reduce using rule 8 (statement -> assignation - .)
    NUMBER          reduce using rule 8 (statement -> assignation - .)
    ADD_OP          reduce using rule 8 (statement -> assignation - .)
    SUB_OP          reduce using rule 8 (statement -> assignation - .)
    INCR_OP         reduce using rule 8 (statement -> assignation - .)
    DECR_OP         reduce using rule 8 (statement -> assignation - .)
    WHILE           reduce using rule 8 (statement -> assignation - .)
    FOR             reduce using rule 8 (statement -> assignation - .)
    FORNEG          reduce using rule 8 (statement -> assignation - .)
    FORPOS          reduce using rule 8 (statement -> assignation - .)
    IF              reduce using rule 8 (statement -> assignation - .)
    FLOAT           reduce using rule 8 (statement -> assignation - .)
    INT             reduce using rule 8 (statement -> assignation - .)
    STRING          reduce using rule 8 (statement -> assignation - .)
    BOOLEAN         reduce using rule 8 (statement -> assignation - .)
    $end            reduce using rule 8 (statement -> assignation - .)
    CLOSE_BRACE     reduce using rule 8 (statement -> assignation - .)


state 43

    (12) statement -> PRINT IDENTIFIER . -

    -               shift and go to state 75


state 44

    (11) statement -> PRINT TEXT . -

    -               shift and go to state 76


state 45

    (14) statement -> PRINTERR IDENTIFIER . -

    -               shift and go to state 77


state 46

    (13) statement -> PRINTERR TEXT . -

    -               shift and go to state 78


state 47

    (18) structure -> forloop bloc .
